# agent-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/mcp-common/: Cargo.toml
crates/mcp-common/src/: error.rs  http.rs  lib.rs
crates/mcp-github/: Cargo.toml
crates/mcp-github/src/: client.rs  main.rs  server.rs  types.rs
crates/mcp-jira/: Cargo.toml
crates/mcp-jira/src/: adf.rs  client.rs  main.rs  server.rs  types.rs
