[package]
name = "mcp-github"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-github"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
