[package]
name = "mcp-jira"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-jira"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
